--- a/pathdep.yaml
+++ b/pathdep.yaml
@@ -1,12 +1,12 @@
 version: "1.0"
 dependencies:
 - import: github.com/davecgh/go-spew
-  commit: ecdeabc65495df2dec95d7c4a4c3e021903035e5
+  commit: 8991bc29aa16c548c550c7ff78260e27b9ab7c73
 - import: github.com/dustin/go-humanize
-  commit: bb3d318650d48840a39aa21a027c6630e198e626
+  commit: 9f541cc9db5d55bce703bd99987c9d5cb8eea45e
 - import: github.com/pmezard/go-difflib
   tag: v1.0.0
 - import: github.com/richardwilkes/toolbox
-  commit: 43e9162acfba7d461587c0d7160304232639af08
+  commit: 2c1fae520bc07566d568cf1a7e730cf900676b18
 - import: github.com/stretchr/testify
-  commit: 87b1dfb5b2fa649f52695dd9eae19abe404a4308
+  tag: v1.2.2
