--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,8 @@
 run:
-  deadline: 5m
-  tests: true
+  timeout: 5m
   modules-download-mode: readonly
 output:
-  format: colored-line-number
-  print-issued-lines: true
-  print-linter-name: true
+  sort-results: true
 linters-settings:
   depguard:
     list-type: blacklist
@@ -16,22 +13,11 @@ linters-settings:
   errcheck:
     check-type-assertions: true
     check-blank: true
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - performance
-      - style
-      - opinionated
-      - experimental
-    disabled-checks:
-      - sloppyReassign
-  gofmt:
-    simplify: true
+  gofumpt:
+    extra-rules: true
   govet:
     check-shadowing: true
+    enable-all: true
     settings:
       printf:
         funcs:
@@ -45,43 +31,38 @@ linters-settings:
           - EndWithMsgf
           - Newf
           - NewWithCausef
-  maligned:
-    suggest-new: true
   misspell:
     locale: US
-  prealloc:
-    simple: true
-    range-loops: true
-    for-loops: false
+  staticcheck:
+    go: "1.18"
+    checks: [ "all", "-SA3000" ]
   unused:
     check-exported: false
 linters:
   disable-all: true
   enable:
-    - deadcode
     - depguard
     - errcheck
+    - errorlint
     - exportloopref
     - goconst
-    - gocritic
-    - gofmt
+    - gofumpt
     - goimports
-    - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
-    - maligned
     - misspell
+    - noctx
     - prealloc
+    - predeclared
     - revive
     - staticcheck
-    - structcheck
+    - typecheck
     - unconvert
     - unused
-    - varcheck
 issues:
-  max-per-linter: 20
-  max-same-issues: 3
-  new: false
+  max-same-issues: 10
   exclude-use-default: false
+  exclude:
+    - "fieldalignment: struct with \\d+ pointer bytes could be"
+    - "package-comments: should have a package comment"
