--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,8 +16,9 @@ linters-settings:
   gofumpt:
     extra-rules: true
   govet:
-    check-shadowing: true
     enable-all: true
+    disable:
+      - composites
     settings:
       printf:
         funcs:
@@ -34,7 +35,7 @@ linters-settings:
   misspell:
     locale: US
   staticcheck:
-    go: "1.21"
+    go: "1.22"
     checks: [ "all", "-SA3000" ]
   unused:
     check-exported: false
