--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,12 @@ linters-settings:
   errcheck:
     check-type-assertions: true
     check-blank: true
+    exclude-functions:
+      - encoding/binary.Write
+      - fmt.Fprint
+      - fmt.Fprintf
+      - fmt.Fprintln
+      - (fmt.State).Write
   gofumpt:
     extra-rules: true
   govet:
@@ -35,10 +41,7 @@ linters-settings:
   misspell:
     locale: US
   staticcheck:
-    go: "1.22"
-    checks: [ "all", "-SA3000" ]
-  unused:
-    check-exported: false
+    checks: ["all", "-SA3000"]
 linters:
   disable-all: true
   enable:
