--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,10 @@
 run:
   timeout: 5m
+  tests: true
   modules-download-mode: readonly
 output:
+  print-issued-lines: true
+  print-linter-name: true
   sort-results: true
 linters-settings:
   depguard:
@@ -19,13 +22,38 @@ linters-settings:
       - fmt.Fprintf
       - fmt.Fprintln
       - (fmt.State).Write
+  goconst:
+    min-len: 3
+    min-occurrences: 3
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - experimental
+      - opinionated
+      - performance
+      - style
+    disabled-checks:
+      - sloppyReassign
   gofumpt:
     extra-rules: true
+  gosec:
+    excludes:
+      - G103
+      - G115
+      - G204
+      - G301
+      - G302
+      - G303
+      - G304
+      - G306
+      - G307
   govet:
     enable-all: true
     disable:
       - composites
     settings:
+      shadow:
+        strict: true
       printf:
         funcs:
           - Errorf
@@ -40,18 +68,68 @@ linters-settings:
           - NewWithCausef
   misspell:
     locale: US
+  prealloc:
+    simple: true
+    range-loops: true
+    for-loops: false
+  revive:
+    rules:
+      - name: blank-imports
+        disabled: false
+      - name: context-as-argument
+        disabled: false
+      - name: context-keys-type
+        disabled: false
+      - name: dot-imports
+        disabled: false
+      - name: error-return
+        disabled: false
+      - name: error-strings
+        disabled: false
+      - name: error-naming
+        disabled: false
+      - name: exported
+        disabled: false
+      - name: if-return
+        disabled: false
+      - name: increment-decrement
+        disabled: false
+      - name: var-naming
+        disabled: false
+      - name: var-declaration
+        disabled: false
+      - name: package-comments
+        disabled: true
+      - name: range
+        disabled: false
+      - name: receiver-naming
+        disabled: false
+      - name: time-naming
+        disabled: false
+      - name: unexported-return
+        disabled: false
+      - name: indent-error-flow
+        disabled: false
+      - name: errorf
+        disabled: false
+      - name: unused-parameter
+        disabled: false
+        arguments:
+          - allowRegex: "^_"
   staticcheck:
     checks: ["all", "-SA3000"]
 linters:
   disable-all: true
   enable:
+    - copyloopvar
     - depguard
     - errcheck
     - errorlint
-    - exportloopref
     - goconst
+    - gocritic
     - gofumpt
     - goimports
+    - gosec
     - gosimple
     - govet
     - ineffassign
@@ -65,7 +143,7 @@ linters:
     - unconvert
     - unused
 issues:
-  max-same-issues: 10
+  max-same-issues: 0
   exclude-use-default: false
   exclude:
     - "package-comments: should have a package comment"
